fix jumpy sortable components by fixing list height on page render

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -203,6 +203,7 @@ button{
             padding: 5px 20px;
             font-weight: normal;
             color: black;
+            cursor: pointer;
 
             &:hover {
                 background-color: #dadada;
